# Cloud_Tomb

./: README.md
Cloud-Tomb-vue3/: README.md  package-lock.json  package.json  vue.config.js
Cloud-Tomb-vue3/public/: index.html
Cloud-Tomb-vue3/src/: App.vue  main.js  router.js
Cloud-Tomb-vue3/src/assets/: style.css
Cloud-Tomb-vue3/src/components/: AppHeader.vue  Login.vue  LoginComponent.vue  LoginModal.vue  TombView.vue
Cloud-Tomb-vue3/src/components/FirebaseAuth/: GoogleLogin.vue  LoginModal.vue  SignupModal.vue
Cloud-Tomb-vue3/src/components/Login/: GoogleLogin.vue
Cloud-Tomb-vue3/src/pages/: Calendar.vue  EditYourTomb.vue  Home.vue  Mypage.vue  Usertomb.vue  cloudtombs.vue  edittombtext.vue  makeyourowntomb.vue
Cloud-Tomb-vue3/src/store/: store.js
Cloud-Tomb-vue3/src/utilities/: firebase.js
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker_run.sh
backend/src/: main.rs
vue3/: README.md  package-lock.json  package.json
vue3/src/: App.vue  router.js
vue3/src/components/: AppHeader.vue
vue3/src/pages/: Heros.vue  Home.vue
