[package]
name = "cloud_tomb"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
serde = "1.0"
serde_derive = "1.0"
